# timelapsetool

./: .gitignore  LICENSE  README.md  feitongraphy.html
skyfire/: .gitignore  pyproject.toml
skyfire/config/: cities.yaml  notify.example.yaml  wechat.example.yaml
skyfire/deploy/: archive_sunsetbot.sh  com.skyfire.tick.plist.example  morning_check.sh
skyfire/src/skyfire/: analyze.py  api.py  backfill.py  backtest.py  checkpoints.py  cli.py  cloudiness.py  config.py  consensus.py  drift.py  engine.py  extras.py  geo.py  geolines.py  gribmaps.py  gridmap.py  heatgrid.py  heatmap_map.py  himawari.py  himawari_hsd.py  llm.py  maps.py  models.py  notifyconf.py  nowcast.py  openmeteo.py  overlay.py  percent.py  phenomena.py  push.py  rag.py  render.py  report.py  schedule.py  skill.py  store.py  suntimes.py  wechatconf.py
skyfire/src/skyfire/assets/: geolines.geojson
skyfire/src/skyfire/rules/: rulebook.md
skyfire/tests/: test_analyze.py  test_api.py  test_backfill.py  test_backtest.py  test_checkpoints.py  test_cli.py  test_cloudiness.py  test_cloudsea.py  test_config.py  test_consensus.py  test_drift.py  test_engine.py  test_firecloud.py  test_geo.py  test_geolines.py  test_gribmaps.py  test_gridmap.py  test_heatgrid.py  test_himawari.py  test_himawari_hsd.py  test_llm.py  test_notifyconf.py  test_nowcast.py  test_openmeteo.py  test_overlay.py  test_percent.py  test_phenomena.py  test_push.py  test_rag.py  test_render.py  test_report.py  test_scenarios.py  test_schedule.py  test_skill.py  test_smoke.py  test_store.py  test_suntimes.py  test_wechatconf.py
(+117 files in other folders)
