[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyfire"
version = "0.1.0"
description = "火烧云/云海预测助手 — 后端预测核心"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "astral>=3.2",
    "PyYAML>=6.0",
    "typer>=0.12",
    "numpy>=1.26",
    "Pillow>=10.0",
    "anthropic>=0.40",
    "satpy>=0.50",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "ecmwf-opendata>=0.3",   # EC 开放数据(全国图 GRIB 直采)
    "cfgrib>=0.9",           # GRIB 解码(GFS/EC 双模式图)
    "xarray>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
skyfire = "skyfire.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skyfire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
